# sys-bio-kgs

./: .dockerignore  .gitignore  Dockerfile  README.md  create_knowledge_graph.py  docker-compose.yml  pyproject.toml
config/: biocypher_config.yaml  biocypher_docker_config.yaml  schema_config.yaml  simple_schema_config.yaml
data/: README.md  matched_annotated_Repressilator_PD_v7.sbgn  matched_annotated_repressilator_BIOMD0000000012.xml
src/sys_bio_kgs/: __init__.py
src/sys_bio_kgs/adapters/: __init__.py  my_resource_adapter.py  sbgn_adapter.py
tests/: __init__.py  test_my_resource_adapter.py
