[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sys_bio_kgs"
version = "0.1.0"
description = "A repository for the implementations of the 2025 BioHackathon Germany that do not have another home already"
readme = "README.md"
authors = [
    {name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "biocypher>=0.11.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.32.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
[project.optional-dependencies]
momapy = [
    "momapy>=0.1.3",
]
[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/sebastian-lobentanzer/sys_bio_kgs"
"Bug Tracker" = "https://github.com/sebastian-lobentanzer/sys_bio_kgs/issues"
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
